--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 <div class="home">
 <h1>BIG DATA </h1>
 <h3>For smarter customer experience</h3>
-<a href="loginlocal.html" style="margin-left:40%;">
+<a href="signuplocal.html" style="margin-left:40%;">
   <i class="fas fa-user-plus"></i>
 
 </a>
