--- a/index.html
+++ b/index.html
@@ -2223,7 +2223,10 @@ border-left-color
            </ul>
        </nav>
 <header id="video" class="scrolling">
-               <div class="logo"></div>
+               <div class="logo">
+               <div class="signup">
+               <h4 style="margin-left:100%;">Signup</h4></div>
+               </div>
                <div class="video relative">
            			<div id="youtube" class="relative">
                     <div class="close absolute"><a href="#"></a></div>
