--- a/index.html
+++ b/index.html
@@ -2204,6 +2204,12 @@ border-left-color
 
 #f7505a;
 }
+	    homepage{
+            margin-top:10px;
+	    margin-left:70%;
+	    color:red;
+		    
+	    }
 
     </style>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -2222,6 +2228,9 @@ border-left-color
            <li><a href="#ourambition"><span></span></a></li>
            </ul>
        </nav>
+	<div class="homepage">
+		<a href="home.html">Home</a>
+	</div>
 <header id="video" class="scrolling">
                <div class="logo">
                <div class="signup">
